# tcm

./: .gitignore  Function(1).py  Function.py  Function3.9.2.py  GUI.py  GUI.ui  HandTrackingModule.py  Kinect_Capture.py  README.md  caltest.py  function3.14.py  function3.9.py  gui.py  main.py  main_copy.py  project.py  pyproject.toml  requirements.txt  test.py  testgui.py
.github/: dependabot.yml
Assignment 1/: 110-程圯--Assignment 01 .doc  Program 1 (Yaoshun).py  Program 1(Homework).py  Program 1(Web).py  Program 1(XueZhang).py  Program 2 (Part1).py  Program 2 (Part2).py
Assignment 2/: 101--程圯--Assignment 02-2021.doc  Program 1.py
Chapter 1/: 作业1.py  作业2.py  作业3.py  作业4.py  作业6、图1.py  作业6、图2.py  作业6、图3.py  最大公约数.py
Chapter 2/: 110--程圯--chapter2.docx  作业1.py  作业2.py  作业3 标准板.py  作业3.py
Chapter 4/: 110--程圯--chapter4.docx  作业1.py  作业2.py  作业3.py  作业4.py
Chapter 5/: 110--程圯--chapter5.docx  作业1.py  作业2.py  作业3 网版.py  作业3.py
Chapter 6/: 110--程圯--chapter6.docx  作业3.py  作业4.py
Lab 1/: Program1.py  Program2.py  python lab 1--2021.docx
Lab 2/: 101--程圯--Lab 02-2021.docx  Program 1.py  Program 2.py  score-database-new.csv  score-database.csv  高一上.xls
components/: box.py  camera.py  gui.css  gui.py  gui_old1.py  gui_old2.py  gui_origin copy.py  gui_origin.py  gui_origin.ui  meridians.py
hooks/: Kinect_Capture.py  PoseModule.py  findAcupoints.py  showMeridians.py  utils.py
pyKinectAzure/: _k4arecord.py  _k4atypes.py  config.py  pyKinectAzure.py
store/: data.py  findAcupoints.py
test/: Function.py  camera.py  function3.14.py  gui_old1.py  test_old.py
(+13 files in other folders)
