[tool.poetry]
name = "tcm"
version = "0.1.0"
description = ""
authors = ["cworld1 <cworld0@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
