[tool.poetry]
name = "tcm"
version = "1.0.1"
description = "An AI program that using Kinect camera and shows netural network and human skeleton."
authors = ["cworld1 <cworld0@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
pyqt5 = "^5.15.9"
pillow = "^9.5.0"
qt-material = "^2.14"
mediapipe = "^0.9.2.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
